--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">SpheroEdu</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="enter_your_name">Ingresa tu Nombre</string>
+    <string name="select_your_type">Selecciona el tipo</string>
+    <string name="master">Master</string>
+    <string name="slave">Esclavo</string>
 </resources>
