--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,14 @@
 <resources>
+    <!--Main Activity-->
     <string name="app_name">SpheroEdu</string>
     <string name="action_settings">Settings</string>
+
+    <!--Data Fragment-->
     <string name="enter_your_name">Ingresa tu Nombre</string>
     <string name="select_your_type">Selecciona el tipo</string>
     <string name="master">Master</string>
     <string name="slave">Esclavo</string>
 
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!--Slave Fragment-->
+    <string name="loading_text">Esperando conexión Bluetooth</string>
 </resources>
