--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <!--Main Activity-->
     <string name="app_name">SpheroEdu</string>
     <string name="action_settings">Settings</string>
+    <string name="error">ERROR!</string>
+    <string name="bluetooth_error_message">La aplicación necesita Bluetooth para funcionar</string>
 
     <!--Data Fragment-->
     <string name="enter_your_name">Ingresa tu Nombre</string>
