--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,5 @@
     <string name="max_devices">Solo es posible conectar con un máximo de 3 dispositivos</string>
     <string name="connect_btn">Conectar</string>
     <string name="connecting_loading">Conectando con dispositivos Bluetooth</string>
-    <string name="connected_devises">Conectado con $1%s de $2%s dispositivos</string>
+    <string name="connected_devises">Conectado con %1$d de %2$d dispositivos</string>
 </resources>
