--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
+    <!--Constants-->
+    <string name="app_name">SpheroEdu</string>
+    <string name="MASTER_APP_NAME">Maestro SpheroEdu</string>
+    <string name="SLAVE_APP_NAME">Esclavo SpheroEdu</string>
+    <string name="USER_NAME">user_name</string>
+
     <!--Main Activity-->
     <string name="action_settings">Settings</string>
     <string name="error">ERROR!</string>
